fixes the header and nav on mobile

--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,12 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     margin-top: 2em;
+    font-size: 2.5em;
 }
 
-h1, h2 {
+h2 {
     font-size: 1.5em;
+    margin-top: 1em;
 }
 
 h3 {
@@ -48,7 +50,7 @@ h4 {
 .hero-container {
     position: relative;
     width: 100%;
-    height: 30em;
+    height: 25em;
     overflow: hidden;
 }
 
@@ -95,8 +97,9 @@ button:focus {
     height: 30em;
 }
 
-.banner h1, .banner h2 {
+.banner h2 {
     font-size: 2.5em;
+    margin-top: 0em;
 }
 
 .nav {
@@ -167,7 +170,28 @@ iframe {
 }
 
 @media (max-width: 600px) {
+
     .hide-xs {
         display: none;
+    }
+
+    h1 {
+        margin-top: 0.8em;
+    }
+
+    h3 {
+        font-size: 1.5em;
+    }
+
+    .banner h1, .banner h2 {
+        font-size: 2em;
+    }
+
+    button {
+        font-size: 1em;
+    }
+
+    .content {
+        width: 90%;
     }
 }
